--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "dayjs": "^1.8.12"
   }
 }
